--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,3 +54,10 @@ body.wrong {
     color: white;
     text-size-adjust: 24px;
 }
+
+.highscores {
+    color:darkkhaki;
+    font-size: 60px;
+    -webkit-text-stroke: 1px black;
+    letter-spacing: 1px;
+}
