finally got the localstorage highscores to work but it still won't stay on the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .hide {
-    display: none;
+    visibility: hidden;
 }
 
 :root {
@@ -52,10 +52,10 @@ body.wrong {
 
 .timerSpan {
     color: white;
-    text-size-adjust: 24px;
+    font-size: 24px;
 }
 
-.highscores {
+.highscoresTitle {
     color:darkkhaki;
     font-size: 60px;
     -webkit-text-stroke: 1px black;
